# testudot

./: .gitignore  .testudot  Dockerfile  LICENSE  cli.ts  course_monitor.db  monitor-util.ts  monitor.sh  monitor.ts  package-lock.json  package.json  pyproject.toml  readme.md  render.yaml  scrape.ts  sections.json  specific_div.html  user-course-map.json  vercel.json
.github/workflows/: monitor.yml
api/: index.py
local/: sections-CMSC132.json  sections-CMSC216.json  sections-CMSC320.json  sections-CMSC330.json  sections-CMSC351.json  sections-ENGL101.json  sections-ENGL101X.json  sections-ENGL142.json  sections-INST104.json  sections-MATH240.json  sections-STAT400.json
prisma/: schema.prisma
prisma/migrations/20250430005855_init/: migration.sql
src/: cli.py  config.py  models.py  monitor.py  notifier.py  scraper.py  utils.py
