[project]
name = "testudot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "schedule>=1.2.2",
    "typer>=0.21.0",
    "upstash-redis>=1.5.0",
    "uvicorn>=0.40.0",
]
